--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -1,12 +1,118 @@
-@import '~bootstrap/dist/css/bootstrap.css';
-
 body {
-  background: #F5F8FA;
-  color: #000000;
+  background-color: rgb(249, 246, 249);
+  margin: 0;
+  width: 100%;
 }
 
-.pokemon-list-container {
+.layout {
+  .menu {
+    background-color: rgb(79, 114, 230);
+    color: #FFFFFF;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    .title {
+      display: flex;
+      flex-grow: 1;
+    }
+
+    .menu-items {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+      flex-grow: 2;
+
+      .menu-item {
+        height: 38px;
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+        padding-right: 10px;
+  
+        &:hover {
+          background-color: rgb(62, 94, 202);
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+.product-list-container {
+  width: 100%;
+
+  .product-item {
+    &:hover {
+      cursor: pointer;
+      background-color: #DFDFDF;
+    }
+
+    padding: 15px;
+    width: 100%;
+    border: #DFDFDF 0.4px solid;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+
+    .product-main-data {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 100%;
+      margin-bottom: 10px;
+
+      .product-name {
+        font-weight: 600;
+        font-size: 24px;
+      }
+
+      .product-price {
+        font-weight: 600;
+        font-size: 24px;
+
+        &.positive {
+          color: green;
+        }
+
+        &.negative {
+          color: red;
+        }
+      }
+      .product-description {
+          font-weight: 600;
+          font-size: 26px;
+      }  
+    }
+
+    .account-secondary-data {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+      font-size: 20px;
+    }
+  }
+}
+.footer
+{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: space-around;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+  .definition
+  {
+      font-size: 20px;
+  }
+
 }
